--- a/index.html
+++ b/index.html
@@ -218,6 +218,109 @@
         </div>
       </form>
 
+      <br><br>
+      <label for="name">Enter age from 1 to 10. Step = 2</label>
+      <input type="number" name="age" id="age" min="1" max="10" step="2" />
+
+      <br><br>
+      <label for="number">Enter number from 0.00 to 1.00</label>
+      <input type="number" name="change" id="pennies" min="0" max="1" step="0.01" />
+      <br><br>
+
+
+      <label for="price">Choose a maximum house price: </label>
+<input
+  type="range"
+  name="price"
+  id="price"
+  min="50000"
+  max="500000"
+  step="100"
+  value="250000" />
+<output class="price-output" for="price"></output>
+
+<script>
+  const price = document.querySelector("#price");
+  const output = document.querySelector(".price-output");
+  
+  output.textContent = price.value;
+  
+  price.addEventListener("input", () => {
+    output.textContent = price.value;
+  });
+</script>
+
+<br><br>
+
+<input type="datetime-local" name="datetime" id="datetime" />
+<br><br>
+<input type="month" name="month" id="month" />
+<br><br>
+<input type="time" name="time" id="time" />
+<br><br>
+<input type="week" name="week" id="week" />
+<br><br>
+
+<label for="myDate">When are you available this summer?</label>
+<input
+  type="date"
+  name="myDate"
+  min="2013-06-01"
+  max="2013-08-31"
+  step="7"
+  id="myDate" />
+
+  <br><br>
+
+  <label for="color">Pick a color:</label>
+  <input type="color" name="color" id="color" />
+
+  <br><br>
+
+  <select id="multi" name="multi" multiple size="2">
+    <optgroup label="fruits">
+      <option>Banana</option>
+      <option selected>Cherry</option>
+      <option>Lemon</option>
+    </optgroup>
+    <optgroup label="vegetables">
+      <option>Carrot</option>
+      <option>Eggplant</option>
+      <option>Potato</option>
+    </optgroup>
+  </select>
+
+  <br><br>
+
+
+  <label for="myFruit">What's your favorite fruit?</label>
+  <input type="text" name="myFruit" id="myFruit" list="mySuggestion" />
+  <datalist id="mySuggestion">
+    <option>Apple</option>
+    <option>Banana</option>
+    <option>Blackberry</option>
+    <option>Blueberry</option>
+    <option>Lemon</option>
+    <option>Lychee</option>
+    <option>Peach</option>
+    <option>Pear</option>
+  </datalist>
+
+  <br><br>
+
+<progress max="100" value="75">75/100</progress>
+
+<br><br>
+<meter min="0" max="100" value="75" low="33" high="66" optimum="50">75</meter>
+<br><br>
+
+
+
+
+
+
+
+
 
 
 </body>
